Fix summary agenda table cell alignment; interstitial lines

--- a/sass/businesspapers-2024.scss
+++ b/sass/businesspapers-2024.scss
@@ -132,6 +132,10 @@ $font-bold: 500;
 
 /*#region Tables */
 
+.Front-Page-Table td {
+    vertical-align: top;
+}
+
 .Basic-Text-Frame table,
 table.StandardTable {
     border: 0;
@@ -171,7 +175,7 @@ table.StandardTable thead td {
 
 /*#region Dividers */
 
-p.Line_Interstitial {
+hr.Line_Interstitial {
     border-top: 1px solid;
     display: block;
     height: 1px;
